[package]
name = "pciutils"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "A clone of pciutils in Rust"
repository = "https://github.com/ekohandel/pciutils.rs"
readme = "README.md"
authors = ["Abe Kohandel"]

[dependencies]
clap = "4.2.1"
env_logger = "0.10.0"
log = "0.4.17"
pci-ids = "0.2.5"
pretty-hex = "0.3.0"

