[package]
name = "pciutils"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A clone of pciutils in Rust"
repository = "https://github.com/ekohandel/pciutils.rs"
readme = "README.md"
authors = ["Abe Kohandel"]

[dependencies]
clap = "4.4.1"
env_logger = "0.10.0"
log = "0.4.20"
pci-ids = "0.2.5"
pretty-hex = "0.3.0"
nom = "7.1.3"
